// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: TextButton should default to standard variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  border: none;
  padding: 0px;
  background-color: transparent;
  font-weight: 300;
  color: hsl(200,96%,11%);
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
    class="c0"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render call to action variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  border: none;
  padding: 0px;
  background-color: transparent;
  font-weight: 300;
  color: hsl(200,96%,35%);
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
    class="c0"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render disabled variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  border: none;
  padding: 0px;
  background-color: transparent;
  color: hsl(0,0%,70%);
}

.c0:hover {
  cursor: auto;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="c0"
    disabled=""
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render inverse call to action variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  border: none;
  padding: 0px;
  background-color: transparent;
  font-weight: 700;
  color: hsl(200,96%,35%);
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
    class="c0"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render inverse disabled variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  border: none;
  padding: 0px;
  background-color: transparent;
  color: hsl(0,0%,70%);
}

.c0:hover {
  cursor: auto;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="c0"
    disabled=""
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render inverse standard variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  border: none;
  padding: 0px;
  background-color: transparent;
  font-weight: 700;
  color: hsl(0,0%,100%);
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
    class="c0"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render standard variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  border: none;
  padding: 0px;
  background-color: transparent;
  font-weight: 300;
  color: hsl(200,96%,11%);
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
    class="c0"
  >
    Click me!
  </button>
</DocumentFragment>
`;
